# Pacman-Project_Efrei

./: CMakeLists.txt  README.md  sdl2-config.cmake
doc/consignes/: 10_Textures.adoc  1_Prendre en main le framework d'affichage.adoc  2_Deplacements sur la grille.adoc  3_La boucle de jeu.adoc  4_Deplacement de pacman partie 2.adoc  5_Clyde.adoc  6_Pinky.adoc  7_Inky.adoc  8_Blinky.adoc  9_Super Pacgum.adoc  Barème projet.adoc
src/: firstLevel.c  firstLevel.h  framework.c  framework.h  main.c  main.h  pacman.c  pacman.h  spirits.c  spirits.h  superpacgum.c  superpacgum.h
